# financial-health-calculator

./: .gitignore  CLAUDE.md  README.md  background_information.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: docs.yml  publish.yml
.streamlit/: config.toml
api/: __init__.py  main.py
api/routes/: cefr.py  compare.py  simulate.py
docs/: index.md
docs/api/: core.md  merton.md  models.md  viz.md  withdrawals.md
docs/examples/: tutorials.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: cefr.md  simulations.md  utility-optimization.md  visualizations.md  withdrawals.md
examples/: 01_cefr_basics.ipynb  02_time_distribution.ipynb  03_withdrawal_comparison.ipynb
fundedness/: __init__.py  cefr.py  liabilities.py  liquidity.py  merton.py  optimize.py  policies.py  risk.py  simulate.py
fundedness/allocation/: __init__.py  base.py  constant.py  glidepath.py  merton_optimal.py
fundedness/models/: __init__.py  assets.py  household.py  liabilities.py  market.py  simulation.py  tax.py  utility.py
fundedness/viz/: __init__.py  colors.py  comparison.py  fan_chart.py  histogram.py  optimal.py  survival.py  tornado.py  waterfall.py
fundedness/withdrawals/: __init__.py  base.py  comparison.py  fixed_swr.py  guardrails.py  merton_optimal.py  rmd_style.py  vpw.py
streamlit_app/: __init__.py  app.py
streamlit_app/components/: asset_editor.py  liability_editor.py  metrics_display.py
streamlit_app/pages/: 0_Inputs.py  1_CEFR_Dashboard.py  2_Time_Runway.py  3_Withdrawal_Lab.py  4_Sensitivity.py  5_Utility_Optimization.py
streamlit_app/utils/: __init__.py  session_state.py
tests/: __init__.py  conftest.py  test_api.py  test_cefr.py  test_liabilities.py  test_merton.py  test_optimize.py  test_simulate.py  test_withdrawals.py
